# endtoend_data_science_project

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  student_sample_data.xlsx  template.py
artifacts/: raw_data.csv  test_data.csv  train_data.csv
src/: dbtester.py  generate_student_data.py
src/end_to_end_datascience_project/: exception.py  logger.py  utils.py
src/end_to_end_datascience_project/components/: data_ingestion.py
